<resources>
    <string name="app_name">我的钱包</string>
    <string name="action_setting">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="text_account">账户</string>
    <string name="text_expense">支出</string>
    <string name="text_income">收入</string>
    <string name="text_report">统计</string>
    <string name="text_category">类型</string>
    <string name="text_settings">设置</string>
    <string name="text_datetime">时间</string>
    <string name="text_add_account">添加账户</string>
    <string name="text_new_account">新增账户</string>
    <string name="text_add_category">添加类型</string>
    <string name="text_new_category">新增类型</string>
    <string name="text_edit_category">编辑分类</string>
    <string name="text_mydata">我的数据</string>
    <string name="remove">删除</string>
    <string name="default_num">0.0</string>
    <string name="title">标题</string>
    <string name="type">分类</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="night">9</string>
    <string name="zero">0</string>
    <string name="del">←</string>
    <string name="point">.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="fa_glass">&#xf000;</string>
    <string name="fa_music">&#xf001;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_envelope_o">&#xf003;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_star_o">&#xf006;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_film">&#xf008;</string>
    <string name="fa_th_large">&#xf009;</string>
    <string name="fa_th">&#xf00a;</string>
    <string name="fa_th_list">&#xf00b;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_times">&#xf00d;</string>
    <string name="fa_search_plus">&#xf00e;</string>
    <string name="fa_search_minus">&#xf010;</string>
    <string name="fa_power_off">&#xf011;</string>
    <string name="fa_signal">&#xf012;</string>
    <string name="fa_cog">&#xf013;</string>
    <string name="fa_trash_o">&#xf014;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_file_o">&#xf016;</string>
    <string name="fa_clock_o">&#xf017;</string>
    <string name="fa_road">&#xf018;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="fa_inbox">&#xf01c;</string>
    <string name="fa_play_circle_o">&#xf01d;</string>
    <string name="fa_repeat">&#xf01e;</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="fa_list_alt">&#xf022;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_flag">&#xf024;</string>
    <string name="fa_headphones">&#xf025;</string>
    <string name="fa_volume_off">&#xf026;</string>
    <string name="fa_volume_down">&#xf027;</string>
    <string name="fa_volume_up">&#xf028;</string>
    <string name="fa_qrcode">&#xf029;</string>
    <string name="fa_barcode">&#xf02a;</string>
    <string name="fa_tag">&#xf02b;</string>
    <string name="fa_tags">&#xf02c;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_bookmark">&#xf02e;</string>
    <string name="fa_print">&#xf02f;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_font">&#xf031;</string>
    <string name="fa_bold">&#xf032;</string>
    <string name="fa_italic">&#xf033;</string>
    <string name="fa_text_height">&#xf034;</string>
    <string name="fa_text_width">&#xf035;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_list">&#xf03a;</string>
    <string name="fa_outdent">&#xf03b;</string>
    <string name="fa_indent">&#xf03c;</string>
    <string name="fa_video_camera">&#xf03d;</string>
    <string name="fa_picture_o">&#xf03e;</string>
    <string name="fa_pencil">&#xf040;</string>
    <string name="fa_map_marker">&#xf041;</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_tint">&#xf043;</string>
    <string name="fa_pencil_square_o">&#xf044;</string>
    <string name="fa_share_square_o">&#xf045;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_arrows">&#xf047;</string>
    <string name="fa_step_backward">&#xf048;</string>
    <string name="fa_fast_backward">&#xf049;</string>
    <string name="fa_backward">&#xf04a;</string>
    <string name="fa_play">&#xf04b;</string>
    <string name="fa_pause">&#xf04c;</string>
    <string name="fa_stop">&#xf04d;</string>
    <string name="fa_forward">&#xf04e;</string>
    <string name="fa_fast_forward">&#xf050;</string>
    <string name="fa_step_forward">&#xf051;</string>
    <string name="fa_eject">&#xf052;</string>
    <string name="fa_chevron_left">&#xf053;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_plus_circle">&#xf055;</string>
    <string name="fa_minus_circle">&#xf056;</string>
    <string name="fa_times_circle">&#xf057;</string>
    <string name="fa_check_circle">&#xf058;</string>
    <string name="fa_question_circle">&#xf059;</string>
    <string name="fa_info_circle">&#xf05a;</string>
    <string name="fa_crosshairs">&#xf05b;</string>
    <string name="fa_times_circle_o">&#xf05c;</string>
    <string name="fa_check_circle_o">&#xf05d;</string>
    <string name="fa_ban">&#xf05e;</string>
    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_arrow_right">&#xf061;</string>
    <string name="fa_arrow_up">&#xf062;</string>
    <string name="fa_arrow_down">&#xf063;</string>
    <string name="fa_share">&#xf064;</string>
    <string name="fa_expand">&#xf065;</string>
    <string name="fa_compress">&#xf066;</string>
    <string name="fa_plus">&#xf067;</string>
    <string name="fa_minus">&#xf068;</string>
    <string name="fa_asterisk">&#xf069;</string>
    <string name="fa_exclamation_circle">&#xf06a;</string>
    <string name="fa_gift">&#xf06b;</string>
    <string name="fa_leaf">&#xf06c;</string>
    <string name="fa_fire">&#xf06d;</string>
    <string name="fa_eye">&#xf06e;</string>
    <string name="fa_eye_slash">&#xf070;</string>
    <string name="fa_exclamation_triangle">&#xf071;</string>
    <string name="fa_plane">&#xf072;</string>
    <string name="fa_calendar">&#xf073;</string>
    <string name="fa_random">&#xf074;</string>
    <string name="fa_comment">&#xf075;</string>
    <string name="fa_magnet">&#xf076;</string>
    <string name="fa_chevron_up">&#xf077;</string>
    <string name="fa_chevron_down">&#xf078;</string>
    <string name="fa_retweet">&#xf079;</string>
    <string name="fa_shopping_cart">&#xf07a;</string>
    <string name="fa_folder">&#xf07b;</string>
    <string name="fa_folder_open">&#xf07c;</string>
    <string name="fa_arrows_v">&#xf07d;</string>
    <string name="fa_arrows_h">&#xf07e;</string>
    <string name="fa_bar_chart_o">&#xf080;</string>
    <string name="fa_twitter_square">&#xf081;</string>
    <string name="fa_facebook_square">&#xf082;</string>
    <string name="fa_camera_retro">&#xf083;</string>
    <string name="fa_key">&#xf084;</string>
    <string name="fa_cogs">&#xf085;</string>
    <string name="fa_comments">&#xf086;</string>
    <string name="fa_thumbs_o_up">&#xf087;</string>
    <string name="fa_thumbs_o_down">&#xf088;</string>
    <string name="fa_star_half">&#xf089;</string>
    <string name="fa_heart_o">&#xf08a;</string>
    <string name="fa_sign_out">&#xf08b;</string>
    <string name="fa_linkedin_square">&#xf08c;</string>
    <string name="fa_thumb_tack">&#xf08d;</string>
    <string name="fa_external_link">&#xf08e;</string>
    <string name="fa_sign_in">&#xf090;</string>
    <string name="fa_trophy">&#xf091;</string>
    <string name="fa_github_square">&#xf092;</string>
    <string name="fa_upload">&#xf093;</string>
    <string name="fa_lemon_o">&#xf094;</string>
    <string name="fa_phone">&#xf095;</string>
    <string name="fa_square_o">&#xf096;</string>
    <string name="fa_bookmark_o">&#xf097;</string>
    <string name="fa_phone_square">&#xf098;</string>
    <string name="fa_twitter">&#xf099;</string>
    <string name="fa_facebook">&#xf09a;</string>
    <string name="fa_github">&#xf09b;</string>
    <string name="fa_unlock">&#xf09c;</string>
    <string name="fa_credit_card">&#xf09d;</string>
    <string name="fa_rss">&#xf09e;</string>
    <string name="fa_hdd_o">&#xf0a0;</string>
    <string name="fa_bullhorn">&#xf0a1;</string>
    <string name="fa_bell">&#xf0f3;</string>
    <string name="fa_certificate">&#xf0a3;</string>
    <string name="fa_hand_o_right">&#xf0a4;</string>
    <string name="fa_hand_o_left">&#xf0a5;</string>
    <string name="fa_hand_o_up">&#xf0a6;</string>
    <string name="fa_hand_o_down">&#xf0a7;</string>
    <string name="fa_arrow_circle_left">&#xf0a8;</string>
    <string name="fa_arrow_circle_right">&#xf0a9;</string>
    <string name="fa_arrow_circle_up">&#xf0aa;</string>
    <string name="fa_arrow_circle_down">&#xf0ab;</string>
    <string name="fa_globe">&#xf0ac;</string>
    <string name="fa_wrench">&#xf0ad;</string>
    <string name="fa_tasks">&#xf0ae;</string>
    <string name="fa_filter">&#xf0b0;</string>
    <string name="fa_briefcase">&#xf0b1;</string>
    <string name="fa_arrows_alt">&#xf0b2;</string>
    <string name="fa_users">&#xf0c0;</string>
    <string name="fa_link">&#xf0c1;</string>
    <string name="fa_cloud">&#xf0c2;</string>
    <string name="fa_flask">&#xf0c3;</string>
    <string name="fa_scissors">&#xf0c4;</string>
    <string name="fa_files_o">&#xf0c5;</string>
    <string name="fa_paperclip">&#xf0c6;</string>
    <string name="fa_floppy_o">&#xf0c7;</string>
    <string name="fa_square">&#xf0c8;</string>
    <string name="fa_bars">&#xf0c9;</string>
    <string name="fa_list_ul">&#xf0ca;</string>
    <string name="fa_list_ol">&#xf0cb;</string>
    <string name="fa_strikethrough">&#xf0cc;</string>
    <string name="fa_underline">&#xf0cd;</string>
    <string name="fa_table">&#xf0ce;</string>
    <string name="fa_magic">&#xf0d0;</string>
    <string name="fa_truck">&#xf0d1;</string>
    <string name="fa_pinterest">&#xf0d2;</string>
    <string name="fa_pinterest_square">&#xf0d3;</string>
    <string name="fa_google_plus_square">&#xf0d4;</string>
    <string name="fa_google_plus">&#xf0d5;</string>
    <string name="fa_money">&#xf0d6;</string>
    <string name="fa_caret_down">&#xf0d7;</string>
    <string name="fa_caret_up">&#xf0d8;</string>
    <string name="fa_caret_left">&#xf0d9;</string>
    <string name="fa_caret_right">&#xf0da;</string>
    <string name="fa_columns">&#xf0db;</string>
    <string name="fa_sort">&#xf0dc;</string>
    <string name="fa_sort_asc">&#xf0dd;</string>
    <string name="fa_sort_desc">&#xf0de;</string>
    <string name="fa_envelope">&#xf0e0;</string>
    <string name="fa_linkedin">&#xf0e1;</string>
    <string name="fa_undo">&#xf0e2;</string>
    <string name="fa_gavel">&#xf0e3;</string>
    <string name="fa_tachometer">&#xf0e4;</string>
    <string name="fa_comment_o">&#xf0e5;</string>
    <string name="fa_comments_o">&#xf0e6;</string>
    <string name="fa_bolt">&#xf0e7;</string>
    <string name="fa_sitemap">&#xf0e8;</string>
    <string name="fa_umbrella">&#xf0e9;</string>
    <string name="fa_clipboard">&#xf0ea;</string>
    <string name="fa_lightbulb_o">&#xf0eb;</string>
    <string name="fa_exchange">&#xf0ec;</string>
    <string name="fa_cloud_download">&#xf0ed;</string>
    <string name="fa_btc">&#xf15a;</string>
</resources>