<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:text="￥"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:gravity="right|center_vertical"
                android:text="@string/default_num"
                android:maxEms="12"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:textSize="32sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@id/ll_record1"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_night"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/night"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/point"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_del"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/del"
                android:textColor="@color/black"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/sel_button_calc"
                android:text="@string/ok"
                android:textColor="@color/primary_dark"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>