<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_wrapper"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:orientation="vertical">

    <!--账户-->
    <LinearLayout
        android:id="@+id/drawer_accounts"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:background="@drawable/sel_textview_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/font_accounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_credit_card"
            android:layout_marginLeft="30dp"
            android:textSize="22sp"
            android:textColor="#111"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:text="@string/text_account"
            android:textSize="18sp"
            android:textColor="#111"/>
    </LinearLayout>

    <!--支出-->
    <LinearLayout
        android:id="@+id/drawer_expenses"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:clickable="true"
        android:background="@drawable/sel_textview_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/font_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_shopping_cart"
            android:layout_marginLeft="30dp"
            android:textSize="25sp"
            android:textColor="#000"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:text="@string/text_expense"
            android:textSize="18sp"
            android:textColor="#000"/>
    </LinearLayout>

    <!--收入-->
    <LinearLayout
        android:id="@+id/drawer_income"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:clickable="true"
        android:background="@drawable/sel_textview_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/font_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_btc"
            android:layout_marginLeft="30dp"
            android:textSize="25sp"
            android:textColor="#000"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/text_income"
            android:textSize="18sp"
            android:textColor="#000"/>
    </LinearLayout>

    <!--统计-->
    <LinearLayout
        android:id="@+id/drawer_reports"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:clickable="true"
        android:background="@drawable/sel_textview_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/font_reports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_bar_chart_o"
            android:layout_marginLeft="30dp"
            android:textSize="22sp"
            android:textColor="#000"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:text="@string/text_report"
            android:textSize="18sp"
            android:textColor="#000"/>
    </LinearLayout>

    <!--分类-->
    <LinearLayout
        android:id="@+id/drawer_categories"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:clickable="true"
        android:background="@drawable/sel_textview_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/font_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_list"
            android:layout_marginLeft="30dp"
            android:textSize="22sp"
            android:textColor="#000"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:text="@string/text_category"
            android:textSize="18sp"
            android:textColor="#000"/>
    </LinearLayout>

    <!--设置-->
    <LinearLayout
        android:id="@+id/drawer_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:clickable="true"
        android:background="@drawable/sel_textview_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/font_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_cog"
            android:layout_marginLeft="30dp"
            android:textSize="22sp"
            android:textColor="#000"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:text="@string/text_settings"
            android:textSize="18sp"
            android:textColor="#000"/>
    </LinearLayout>
</LinearLayout>

